tests/snapshots/integration__main_fn_test__with_main_and_subcommands.snap
---
source: tests/main_fn_test.rs
assertion_line: 36
expression: output
---
RUN
prog -h

STDOUT


STDERR
prog 

USAGE:
    prog [OPTIONS] [SUBCOMMAND]

OPTIONS:
        --foo     
    -h, --help    Print help information

SUBCOMMANDS:
    cmd    


