tests/snapshots/integration__main_fn_test__without_main_but_with_subcommands.snap
---
source: tests/main_fn_test.rs
expression: output
---
RUN
prog

OUTPUT
cat >&2 <<-'EOF' 
USAGE: prog [OPTIONS] <COMMAND>

OPTIONS:
      --foo   
  -h, --help  Print help

COMMANDS:
  cmd  

EOF
exit 1

